# Suprana

./: .mergify.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0-community.md
banks-server/: Cargo.toml
banks-server/src/: banks_server.rs
cd/: README.md
ci/: README.md
ci/docker/: README.md
cost-model/: Cargo.toml
cost-model/src/: block_cost_limits.rs  cost_model.rs  cost_tracker.rs  lib.rs  transaction_cost.rs
docs/: README.md
docs/src/: architecture.md  backwards-compatibility.md  faq.md  proposals.md  what-is-a-validator.md  what-is-an-rpc-node.md
docs/src/cli/: index.md  install.md  intro.md
docs/src/cli/examples/: choose-a-cluster.md  delegate-stake.md  deploy-a-program.md  durable-nonce.md  offline-signing.md  sign-offchain-message.md  test-validator.md  transfer-tokens.md
docs/src/cli/wallets/: file-system.md  index.md  paper.md
docs/src/cli/wallets/hardware/: index.md  ledger.md
docs/src/clusters/: available.md  benchmark.md  index.md  metrics.md
docs/src/consensus/: commitments.md  fork-generation.md  leader-rotation.md  stake-delegation-and-rewards.md  synchronization.md  turbine-block-propagation.md
docs/src/implemented-proposals/: abi-management.md  durable-tx-nonces.md  epoch_accounts_hash.md  index.md  installer.md  leader-validator-transition.md  rent.md  rpc-transaction-history.md  staking-rewards.md  testing-programs.md  tower-bft.md  transaction-fees.md  validator-timestamp-oracle.md
docs/src/implemented-proposals/ed_overview/: ed_economic_sustainability.md  ed_mvp.md  ed_overview.md  ed_references.md  ed_storage_rent_economics.md
docs/src/implemented-proposals/ed_overview/ed_validation_client_economics/: ed_vce_state_validation_protocol_based_rewards.md  ed_vce_state_validation_transaction_fees.md  ed_vce_validation_stake_delegation.md
docs/src/operations/: index.md  prerequisites.md  requirements.md  setup-a-validator.md  setup-an-rpc-node.md  validator-initiatives.md  validator-or-rpc-node.md
docs/src/operations/best-practices/: general.md  monitoring.md  security.md
docs/src/operations/guides/: restart-cluster.md  validator-failover.md  validator-info.md  validator-monitor.md  validator-stake.md  validator-start.md  validator-troubleshoot.md  vote-accounts.md
docs/src/proposals/: accepted-design-proposals.md  accounts-db-replication.md  bankless-leader.md  blockstore-rocksdb-compaction.md  cluster-test-framework.md  comprehensive-compute-fees.md  embedding-move.md  interchain-transaction-verification.md  ledger-replication-to-implement.md  off-chain-message-signing.md  optimistic-confirmation-and-slashing.md  program-instruction-macro.md  return-data.md  rip-curl.md  rust-clients.md  simple-payment-and-state-verification.md  timely-vote-credits.md  validator-proposal.md  versioned-transactions.md  vote-signing-to-implement.md
docs/src/runtime/: programs.md  sysvars.md  zk-token-proof.md
docs/src/validator/: blockstore.md  geyser.md  gossip.md  runtime.md  tpu.md  tvu.md
geyser-plugin-interface/: README.md
ledger/: Cargo.toml
ledger/benches/: blockstore.rs  blockstore_processor.rs  protobuf.rs  sigverify_shreds.rs
ledger/src/: ancestor_iterator.rs  bank_forks_utils.rs  bigtable_delete.rs  bigtable_upload.rs  bigtable_upload_service.rs  blockstore.rs  blockstore_cleanup_service.rs  blockstore_db.rs  blockstore_meta.rs  blockstore_metrics.rs  blockstore_processor.rs  entry_notifier_interface.rs  entry_notifier_service.rs  genesis_utils.rs  leader_schedule.rs  leader_schedule_cache.rs  leader_schedule_utils.rs  lib.rs  next_slots_iterator.rs  rooted_slot_iterator.rs  shred.rs  shredder.rs  sigverify_shreds.rs  slot_stats.rs  staking_utils.rs  token_balances.rs  transaction_address_lookup_table_scanner.rs
ledger/src/blockstore/: blockstore_purge.rs
ledger/src/shred/: legacy.rs  merkle.rs  shred_code.rs  shred_data.rs  stats.rs  traits.rs
ledger/tests/: blockstore.rs  shred.rs
local-cluster/: Cargo.toml
local-cluster/src/: cluster.rs  cluster_tests.rs  integration_tests.rs  local_cluster.rs  local_cluster_snapshot_utils.rs  validator_configs.rs
local-cluster/tests/: local_cluster.rs
metrics/: Cargo.toml  README.md
metrics/benches/: metrics.rs
metrics/scripts/: README.md  enable.sh  start.sh
metrics/scripts/grafana-provisioning/dashboards/: cluster-monitor.json
metrics/src/: counter.rs  metrics.rs  poh_timing_point.rs
quic-client/: Cargo.toml
quic-client/src/: lib.rs  quic_client.rs
quic-client/src/nonblocking/: quic_client.rs
quic-client/tests/: quic_client.rs
rpc-test/: Cargo.toml
rpc-test/tests/: nonblocking.rs  rpc.rs
sdk/: README.md
sdk/bpf/c/: README.md
sdk/docker-solana/: README.md
sdk/program/: README.md
sdk/sbf/c/: README.md
storage-bigtable/: README.md
storage-bigtable/build-proto/: README.md
storage-proto/: README.md
tokens/: README.md
transaction-status/: Cargo.toml
transaction-status/benches/: extract_memos.rs
transaction-status/src/: extract_memos.rs  lib.rs  parse_accounts.rs  parse_address_lookup_table.rs  parse_associated_token.rs  parse_bpf_loader.rs  parse_instruction.rs  parse_stake.rs  parse_system.rs  parse_token.rs  parse_vote.rs
transaction-status/src/parse_token/extension/: confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  permanent_delegate.rs  reallocate.rs  transfer_fee.rs  transfer_hook.rs
vote/: Cargo.toml
vote/src/: lib.rs  vote_account.rs  vote_parser.rs  vote_transaction.rs
watchtower/: README.md
web3.js/: README.md
zk-token-sdk/: Cargo.toml
zk-token-sdk/src/encryption/: auth_encryption.rs  discrete_log.rs  elgamal.rs  mod.rs  pedersen.rs
