[package]
name = "suprana-banks-server"
description = "Suprana banks server"
documentation = "https://docs.rs/suprana-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
suprana-banks-interface = { workspace = true }
suprana-client = { workspace = true }
suprana-runtime = { workspace = true }
suprana-sdk = { workspace = true }
suprana-send-transaction-service = { workspace = true }
suprana-svm = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "suprana_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
