[package]
name = "suprana-cost-model"
description = "Suprana cost model"
documentation = "https://docs.rs/suprana-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
suprana-address-lookup-table-program = { workspace = true }
suprana-bpf-loader-program = { workspace = true }
suprana.netpute-budget-program = { workspace = true }
suprana-config-program = { workspace = true }
suprana-frozen-abi = { workspace = true }
suprana-frozen-abi-macro = { workspace = true }
suprana-loader-v4-program = { workspace = true }
suprana-metrics = { workspace = true }
suprana-program-runtime = { workspace = true }
suprana-sdk = { workspace = true }
suprana-stake-program = { workspace = true }
suprana-system-program = { workspace = true }
suprana-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "suprana_cost_model"

[dev-dependencies]
suprana-logger = { workspace = true }
suprana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
