[package]
name = "suprana-local-cluster"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/suprana-local-cluster"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
suprana-accounts-db = { workspace = true }
suprana-client = { workspace = true }
suprana-config-program = { workspace = true }
suprana-core = { workspace = true }
suprana-entry = { workspace = true }
suprana-gossip = { workspace = true }
suprana-ledger = { workspace = true }
suprana-logger = { workspace = true }
suprana-pubsub-client = { workspace = true }
suprana-quic-client = { workspace = true }
suprana-rpc-client = { workspace = true }
suprana-rpc-client-api = { workspace = true }
suprana-runtime = { workspace = true }
suprana-sdk = { workspace = true }
suprana-stake-program = { workspace = true }
suprana-streamer = { workspace = true }
suprana-thin-client = { workspace = true }
suprana-tpu-client = { workspace = true }
suprana-turbine = { workspace = true }
suprana-vote = { workspace = true }
suprana-vote-program = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
gag = { workspace = true }
serial_test = { workspace = true }
suprana-download-utils = { workspace = true }
suprana-ledger = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
