[package]
name = "suprana-quic-client"
description = "Suprana Quic Client"
documentation = "https://docs.rs/suprana-quic-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-mutex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true, features = ["dangerous_configuration"] }
suprana-connection-cache = { workspace = true }
suprana-measure = { workspace = true }
suprana-metrics = { workspace = true }
suprana-net-utils = { workspace = true }
suprana-rpc-client-api = { workspace = true }
suprana-sdk = { workspace = true }
suprana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }
suprana-logger = { workspace = true }
suprana-perf = { workspace = true }
