[package]
name = "suprana-rpc-test"
description = "Suprana RPC Test"
documentation = "https://docs.rs/suprana-rpc-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
suprana-account-decoder = { workspace = true }
suprana-client = { workspace = true }
suprana-pubsub-client = { workspace = true }
suprana-rpc = { workspace = true }
suprana-rpc-client = { workspace = true }
suprana-rpc-client-api = { workspace = true }
suprana-sdk = { workspace = true }
suprana-streamer = { workspace = true }
suprana-test-validator = { workspace = true }
suprana-tpu-client = { workspace = true }
suprana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
suprana-logger = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
